[project]
name = "cathaydidisdk"
version = "0.1.3"
description = "cathaydidisdk"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"cathayddsdk" = ["Consts/*.json"]